Htmx implementation to master branch (#636)
* Bump com.google.cloud.tools:jib-maven-plugin from 3.4.2 to 3.4.3

Bumps [com.google.cloud.tools:jib-maven-plugin](https://github.com/GoogleContainerTools/jib) from 3.4.2 to 3.4.3.
- [Release notes](https://github.com/GoogleContainerTools/jib/releases)
- [Commits](https://github.com/GoogleContainerTools/jib/commits)

---
updated-dependencies:
- dependency-name: com.google.cloud.tools:jib-maven-plugin
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump de.codecentric:spring-boot-admin-starter-client from 3.2.3 to 3.3.2

Bumps [de.codecentric:spring-boot-admin-starter-client](https://github.com/codecentric/spring-boot-admin) from 3.2.3 to 3.3.2.
- [Release notes](https://github.com/codecentric/spring-boot-admin/releases)
- [Commits](https://github.com/codecentric/spring-boot-admin/compare/3.2.3...3.3.2)

---
updated-dependencies:
- dependency-name: de.codecentric:spring-boot-admin-starter-client
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump org.springframework.boot:spring-boot-starter-parent

Bumps [org.springframework.boot:spring-boot-starter-parent](https://github.com/spring-projects/spring-boot) from 3.2.4 to 3.3.1.
- [Release notes](https://github.com/spring-projects/spring-boot/releases)
- [Commits](https://github.com/spring-projects/spring-boot/compare/v3.2.4...v3.3.1)

---
updated-dependencies:
- dependency-name: org.springframework.boot:spring-boot-starter-parent
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump org.apache.maven.plugins:maven-dependency-plugin

Bumps [org.apache.maven.plugins:maven-dependency-plugin](https://github.com/apache/maven-dependency-plugin) from 3.6.1 to 3.7.1.
- [Release notes](https://github.com/apache/mav