@@ -6,6 +6,7 @@ import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.io.Encoders;
 import io.jsonwebtoken.security.Keys;
+import lombok.Setter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -18,35 +19,31 @@ import java.util.Date;
 @Component
 public class JwtUtils {
 
-	private static final Logger LOGGER = LoggerFactory.getLogger(JwtUtils.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(JwtUtils.class);
 
     private static final String AUTH_PROVIDER = "provider";
     private static final String FULL_NAME = "name";
     private static final String ROLES = "roles";
     private static final String ROLES_DELIMETER = ",";
 
+    @Setter
     @Value("${books.jwt.expiryInMilliSeconds}")
     private int expiryInMilliSeconds;
 
     @Value("${books.jwt.actuatorExpiryInMilliSeconds}")
     private long expiryInMilliSecondsActuator;
 
+    @Setter
     @Value("${books.jwt.secretKey}")
     private String secretKey;
 
+    @Setter
     @Value("${books.jwt.issuer}")
     private String issuer;
 
-    public void setExpiryInMilliSeconds(int expiryInMilliSeconds) {
-        this.expiryInMilliSeconds = expiryInMilliSeconds;
-    }
-
-    public void setSecretKey(String secretKey) {
-        this.secretKey = secretKey;
-    }
-
-    public void setIssuer(String issuer) {
-        this.issuer = issuer;
+    public static String createRandomBase64EncodedSecretKey() {
+        SecretKey key = Jwts.SIG.HS512.key().build();
+        return Encoders.BASE64.encode(key.getEncoded());
     }
 
     public User getUserFromToken(String token) {
@@ -63,11 +60,11 @@ public class JwtUtils {
         String authProvider = (String) claims.get(AUTH_PROVIDER);
         String fullName = (String) claims.get(FULL_NAME);
         String roles = (String) claims.get(ROLES);
-        
-        if (! issuer.equals(extractedIssuer)) {
-        	String errMsg = "Expected token issuer of " + issuer + " but found " + extractedIssuer;
-        	LOGGER.error(errMsg);
-        	throw new IllegalArgumentException(errMsg);
+
+        if (!issuer.equals(extractedIssuer)) {
+            String errMsg = "Expected token issuer of " + issuer + " but found " + extractedIssuer;
+            LOGGER.error(errMsg);
+            throw new IllegalArgumentException(errMsg);
         }
 
         User user = User.builder().
@@ -89,10 +86,10 @@ public class JwtUtils {
         ArrayList<String> roles = new ArrayList<>();
         user.getRoles().forEach(s -> roles.add(String.valueOf(s.getRoleNumber())));
 
-        long tokenExpiry = (user.getRoles().size() == 1 && user.getRoles().get(0) == User.Role.ROLE_ACTUATOR)
+        long tokenExpiry = (user.getRoles().size() == 1 && user.getRoles().getFirst() == User.Role.ROLE_ACTUATOR)
                 ? expiryInMilliSecondsActuator : expiryInMilliSeconds;
 
-         byte[] key = Decoders.BASE64.decode(secretKey);
+        byte[] key = Decoders.BASE64.decode(secretKey);
         SecretKey secretKeyCrypto = Keys.hmacShaKeyFor(key);
 
         return Jwts.builder()
@@ -105,10 +102,5 @@ public class JwtUtils {
                 .expiration(new Date(new Date().getTime() + tokenExpiry))
                 .signWith(secretKeyCrypto)
                 .compact();
-    }
-
-    public static String createRandomBase64EncodedSecretKey() {
-        SecretKey key = Jwts.SIG.HS512.key().build();
-        return Encoders.BASE64.encode(key.getEncoded());
     }
 }
