@@ -17,20 +17,13 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.aggregation.Aggregation;
 import org.springframework.data.mongodb.core.aggregation.AggregationResults;
-import org.springframework.data.mongodb.core.query.Criteria;
-import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.data.mongodb.core.query.TextCriteria;
-import org.springframework.data.mongodb.core.query.TextQuery;
-import org.springframework.data.mongodb.core.query.Update;
+import org.springframework.data.mongodb.core.query.*;
 import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 
-import static org.springframework.data.mongodb.core.aggregation.Aggregation.group;
-import static org.springframework.data.mongodb.core.aggregation.Aggregation.newAggregation;
-import static org.springframework.data.mongodb.core.aggregation.Aggregation.project;
-import static org.springframework.data.mongodb.core.aggregation.Aggregation.sort;
+import static org.springframework.data.mongodb.core.aggregation.Aggregation.*;
 
 @Repository
 public class BookRepositoryImpl implements BookRepositoryCustomMethods {
@@ -103,7 +96,7 @@ public class BookRepositoryImpl implements BookRepositoryCustomMethods {
     public Book findCommentsForBook(String bookId) {
         Query query = new Query(Criteria.where("id").is(bookId));
         query.fields().include("_id").include(COMMENTS);
-        return mongoTemplate.find(query, Book.class).get(0);
+        return mongoTemplate.find(query, Book.class).getFirst();
     }
 
     @Override
@@ -158,9 +151,11 @@ public class BookRepositoryImpl implements BookRepositoryCustomMethods {
 
         List<Book> books = mongoTemplate.find(query, Book.class);
 
+        Query countQuery = TextQuery.queryText(criteria);
+
         return PageableExecutionUtils.getPage(
                 books,
                 pageable,
-                () -> mongoTemplate.count(query, Book.class));
+                () -> mongoTemplate.count(countQuery, Book.class));
     }
 }
