@@ -34,8 +34,8 @@ class UserRepositoryTest extends IntegrationTest {
         userRepository.insert(user);
 
         List<User> users = userRepository.findAllByAuthenticationServiceIdAndAuthProvider(SERVICE_ID, GOOGLE.toString());
-        assertEquals(1,users.size());
-        assertEquals(FULL_NAME, users.get(0).getFullName());
+        assertEquals(1, users.size());
+        assertEquals(FULL_NAME, users.getFirst().getFullName());
     }
 
     @Test
@@ -50,26 +50,26 @@ class UserRepositoryTest extends IntegrationTest {
         User user = createTestUser();
         userRepository.insert(user);
         List<User> users = userRepository.findAllByAuthenticationServiceIdAndAuthProvider(SERVICE_ID, GOOGLE.toString());
-        assertEquals(0, users.get(0).getRoles().size());
+        assertEquals(0, users.getFirst().getRoles().size());
 
-        ClientRoles clientRoles = new ClientRoles(users.get(0).getId(), false, true);
+        ClientRoles clientRoles = new ClientRoles(users.getFirst().getId(), false, true);
         long updatesCount = userRepository.updateUserRoles(clientRoles);
         assertEquals(1, updatesCount);
         users = userRepository.findAllByAuthenticationServiceIdAndAuthProvider(SERVICE_ID, GOOGLE.toString());
-        assertEquals(1, users.get(0).getRoles().size());
-        assertEquals(ROLE_EDITOR, users.get(0).getRoles().get(0));
+        assertEquals(1, users.getFirst().getRoles().size());
+        assertEquals(ROLE_EDITOR, users.getFirst().getRoles().getFirst());
 
-        clientRoles = new ClientRoles(users.get(0).getId(), true, true);
+        clientRoles = new ClientRoles(users.getFirst().getId(), true, true);
         userRepository.updateUserRoles(clientRoles);
         users = userRepository.findAllByAuthenticationServiceIdAndAuthProvider(SERVICE_ID, GOOGLE.toString());
-        assertEquals(2, users.get(0).getRoles().size());
-        assertEquals(ROLE_ADMIN, users.get(0).getRoles().get(0));
-        assertEquals(ROLE_EDITOR, users.get(0).getRoles().get(1));
+        assertEquals(2, users.getFirst().getRoles().size());
+        assertEquals(ROLE_ADMIN, users.getFirst().getRoles().getFirst());
+        assertEquals(ROLE_EDITOR, users.getFirst().getRoles().get(1));
 
-        clientRoles = new ClientRoles(users.get(0).getId(), false, false);
+        clientRoles = new ClientRoles(users.getFirst().getId(), false, false);
         userRepository.updateUserRoles(clientRoles);
         users = userRepository.findAllByAuthenticationServiceIdAndAuthProvider(SERVICE_ID, GOOGLE.toString());
-        assertEquals(0, users.get(0).getRoles().size());
+        assertEquals(0, users.getFirst().getRoles().size());
     }
 
 }
